fix gap galery

--- a/src/Components/Gallery/Card/card.module.scss
+++ b/src/Components/Gallery/Card/card.module.scss
@@ -7,7 +7,6 @@
   width: 100%;
   height: 255px;
   border-radius: 10px;
-  margin: 10px;
   padding: 15px;
   background: linear-gradient(
   180deg,
