--- a/src/Components/Gallery/gallery.module.scss
+++ b/src/Components/Gallery/gallery.module.scss
@@ -17,6 +17,7 @@
     border-radius: 10px;
     background: variables.$grey_color;
     margin: 10px 100px;
-    padding: 50px;
+    padding: 40px 0;
+    gap: 40px;
   }
 }
